# feudalgpt

./: README.md  pyproject.toml
src/feudalgpt/: __init__.py  __main__.py  command.py  environment.py  gpt.py
src/feudalgpt/cli/: __init__.py
src/feudalgpt/prompts/: boss.txt  common.txt
